# helloworld-esp32

./: .gitignore  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  component.mk  requirements.txt
main/applications/source/: hello_world_main.c
main/drivers/include/: drivers.h
main/framework/include/: framework.h
main/framework/source/: framework.c
main/include/: config.h  def.h
