idf_component_register(SRCS "applications/source/hello_world_main.c"
                    "framework/source/framework.c"
                    "clib/crc16-clang/crc16.c"
                    "clib/bror/bror.c"
                    "clib/bror-freertos/broradapter.c"
                    "clib/lagan-clang/lagan.c"
                    "clib/wifi-esp32/wifi.c"
                    "clib/async-clang/async.c"
                    "clib/tztime/tztime.c"
                    "clib/tzmalloc/bget.c"
                    "clib/tzmalloc/tzmalloc.c"
                    "clib/tzlist/tzlist.c"
                    "clib/udp-esp32/udp.c"
                    "clib/clock-esp32/clock.c"
                    "clib/tzfifo/tzfifo.c"
                    "clib/utz-clang/utzcommon.c"
                    "clib/utz-clang/utzehp.c"
                    "clib/utz-clang/utzflp.c"
                    "clib/utz-clang/utznlv1.c"
                    "clib/dcom-clang/dcom.c"
                    "clib/dcom-clang/dcomblockrx.c"
                    "clib/dcom-clang/dcomblocktx.c"
                    "clib/dcom-clang/dcomcallback.c"
                    "clib/dcom-clang/dcomcommon.c"
                    "clib/dcom-clang/dcomlog.c"
                    "clib/dcom-clang/dcomparam.c"
                    "clib/dcom-clang/dcomrx.c"
                    "clib/dcom-clang/dcomrxcon.c"
                    "clib/dcom-clang/dcomtx.c"
                    "clib/dcom-clang/dcomwaitlist.c"
                    "clib/tzbox/tzbox.c"
                    "clib/knock-clang/knock.c"
                    "clib/tzaccess-clang/tzaccess.c"
                    "clib/tzaccess-clang/tzaccessapply.c"
                    "clib/tzaccess-clang/tzaccessconfig.c"
                    "clib/tzaccess-clang/tzaccessconn.c"
                    "clib/tzaccess-clang/tzaccessparsecmp.c"
                    "clib/tzaccess-clang/tzaccessstandardlayer.c"
                    "clib/tziot-clang/tziot.c"
                    "clib/tziot-clang/tziotconfig.c"
                    "clib/tziot-clang/tziotdcom.c"
                    "clib/tziot-clang/tziotpipe.c"
                    "clib/tziot-clang/tziotstandardlayer.c"
                    "clib/bleserver-esp32/bleserver.c"
                    "clib/tzflash/tzflash.c"
                    "clib/tzflashadapter-esp32/tzflashadapter.c"
                    "clib/platsa/platsa.c"
                    "clib/upgrade-esp32/upgrade.c"
                    "clib/tzdaemon/tzdaemon.c"
                    "clib/vsocket/vsocket.c"
                    "clib/statistics/statistics.c"
                    INCLUDE_DIRS ""
                    PRIV_INCLUDE_DIRS "include"
                    "drivers/include"
                    "framework/include"
                    "applications/include"
                    "clib/crc16-clang"
                    "clib/bror"
                    "clib/bror-freertos"
                    "clib/lagan-clang"
                    "clib/wifi-esp32"
                    "clib/async-clang"
                    "clib/tztime"
                    "clib/tzmalloc"
                    "clib/tzlist"
                    "clib/pt"
                    "clib/udp-esp32"
                    "clib/tztype"
                    "clib/clock-esp32"
                    "clib/tzfifo"
                    "clib/utz-clang"
                    "clib/dcom-clang"
                    "clib/tzbox"
                    "clib/knock-clang"
                    "clib/tzaccess-clang"
                    "clib/tziot-clang"
                    "clib/bleserver-esp32"
                    "clib/tzflash"
                    "clib/tzflashadapter-esp32"
                    "clib/platsa"
                    "clib/upgrade-esp32"
                    "clib/tzdaemon"
                    "clib/vsocket"
                    "clib/statistics")
